--- a/client/src/index.css
+++ b/client/src/index.css
@@ -2,20 +2,82 @@
 @tailwind components;
 @tailwind utilities;
 
+:root{
+    --grey-50: #f8fafc;
+    --grey-200: #e2e8f0;
+    --grey-900: #0f172a;
+    --backgroundColor: var(--grey-50);
+    --textColor: var(--grey-900);
+    --borderRadius: 0.25rem;
+    --letterSpacing: 1px;
+    --transition: 0.3s ease-in-out all;
+    --max-width: 1120px;
+    --fixed-width: 600px;
+    --fluid-width: 90vw;
+    /* box shadow*/
+    --shadow-1: 0 1px 3px 0 rgba(0, 0, 0, 0.1), 0 1px 2px 0 rgba(0, 0, 0, 0.06);
+    --shadow-2: 0 4px 6px -1px rgba(0, 0, 0, 0.1),
+    0 2px 4px -1px rgba(0, 0, 0, 0.06);
+    --shadow-3: 0 10px 15px -3px rgba(0, 0, 0, 0.1),
+    0 4px 6px -2px rgba(0, 0, 0, 0.05);
+    --shadow-4: 0 20px 25px -5px rgba(0, 0, 0, 0.1),
+    0 10px 10px -5px rgba(0, 0, 0, 0.04);
+}
+
 /* styles.css */
 .text-custom-color {
     --text-opacity: 1; /* set the opacity to 1 for full opacity */
     color: rgba(210, 146, 255, var(--text-opacity));
 }
 
-/* styles.css */
+.form {
+    width: 90vw;
+    max-width: var(--fixed-width);
+    border-radius: var(--borderRadius);
+    box-shadow: var(--shadow-2);
+    padding: 2rem 2.5rem;
+    margin: 3rem auto;
+}
+.form-label {
+    display: block;
+    margin-bottom: 0.5rem;
+    text-transform: capitalize;
+    letter-spacing: var(--letterSpacing);
+}
+
+/* Base styles */
+.form-input,
+.form-textarea {
+    width: 100%;
+    padding: 0.375rem 0.75rem;
+    border-radius: var(--borderRadius);
+    background: var(--backgroundColor);
+    border: 1px solid var(--grey-200);
+}
+
+/* Additional styles specific to .form-input */
+.form-input {
+    @apply w-full py-1 px-2;
+}
+
+.form-row {
+    margin-bottom: 1rem;
+}
+
 .btn {
-    @apply text-white bg-blue-700 hover:bg-blue-800 focus:ring-4
-    focus:ring-blue-300 font-medium rounded-lg text-sm px-5
-    py-2.5 me-2 mb-2 dark:bg-blue-600 dark:hover:bg-blue-700 focus:outline-none dark:focus:ring-blue-800;
+    cursor: pointer;
+    color: white;
+    background: blue;
+    border: transparent;
+    border-radius: var(--borderRadius);
+    letter-spacing: var(--letterSpacing);
+    padding: 0.375rem 0.75rem;
+    box-shadow: var(--shadow-1);
+    transition: var(--transition);
+    text-transform: capitalize;
+    display: inline-block;
 }
 
-.btn-md {
-    @apply  px-12 py-3  ;
+.btn-block {
+    width: 100%;
 }
-
